<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivitySelDir" >
	<RelativeLayout  android:layout_width="match_parent"
    android:layout_height="match_parent">
	    

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/title_bkg"
        android:paddingBottom="5dp"
        android:paddingTop="5dp" >

        <Button
            android:id="@+id/button_return"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:drawableLeft="@drawable/back2"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@drawable/selector_button" >
        </Button>

        <Button
            android:id="@+id/button_confirm"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/ok"
            android:textColor="@color/textWhite"
            android:textSize="16sp"
            android:background="@drawable/selector_button" >
        </Button>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/button_confirm"
            android:layout_toRightOf="@id/button_return"
            android:ellipsize="middle"
            android:gravity="center"
            android:text="@string/sel_dir"
            android:textColor="@color/textWhite"
            android:textSize="17sp" >
        </TextView>
    </RelativeLayout>

    <Button
        android:id="@+id/button_newdir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/selector_button"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:text="@string/new_dir"
        android:textColor="@color/textWhite"
        android:textSize="17sp" />

    <com.imagelib.ctrl.Folder_GridMode
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/button_newdir"
        android:layout_below="@id/title" >
    </com.imagelib.ctrl.Folder_GridMode>
	</RelativeLayout>
	    <RelativeLayout
        android:id="@+id/mask"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#50000000"
        android:clickable="true"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/shape_progress"
            android:orientation="horizontal"
            android:padding="20dp" >

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp" />

            <TextView
                android:id="@+id/tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/load_image"
                android:textColor="@color/textWhite" >
            </TextView>
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>