<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context=".ActivityGallery" >

    <com.imagelib.photoview.HackyViewPager
        android:id="@+id/vp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="0dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:paddingTop="0dp" />

    <RelativeLayout
        android:id="@+id/bar_top"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="top"
        android:background="@color/title_bkg_trans"
        android:clickable="true"
        android:visibility="invisible" >

        <Button
            android:id="@+id/button_return"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:background="@drawable/selector_button"
            android:drawableLeft="@drawable/back2"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <Button
            android:id="@+id/button_show"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/selector_button"
            android:drawableLeft="@drawable/play_ic"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:visibility="visible" />

        <Button
            android:id="@+id/button_rotate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/selector_button_rotate"
            android:visibility="gone" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/textWhite"
            android:textSize="16sp" >
        </TextView>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/bar_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/title_bkg_trans"
        android:clickable="true"
        android:orientation="horizontal"
        android:visibility="invisible" >

        <Button
            android:id="@+id/button_del"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="@drawable/selector_button"
            android:drawableTop="@drawable/delete_ic"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/delete"
            android:textColor="@color/textWhite" />

        <Button
            android:id="@+id/button_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="@drawable/selector_button"
            android:drawableTop="@drawable/share_ic"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/share"
            android:textColor="@color/textWhite" />

        <Button
            android:id="@+id/button_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="@drawable/selector_button"
            android:drawableTop="@drawable/like_normal"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/like"
            android:textColor="@color/textWhite" />

        <Button
            android:id="@+id/button_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="@drawable/selector_button"
            android:drawableTop="@drawable/more_ic"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/more"
            android:textColor="@color/textWhite" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/tip"
        android:background="@drawable/shape_progress"
        android:orientation="horizontal"
        android:padding="20dp" 
        android:visibility="gone"
        >

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp" />

        <TextView
            android:id="@+id/tiptext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/del_image"
            android:textColor="@color/textWhite" >
        </TextView>
    </LinearLayout>

</FrameLayout>